k8s/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-postgres
  labels:
    app: todo-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir: {}
