k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  labels:
    app: todo-backend
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
