k8s/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: todo-postgres
spec:
  selector:
    app: todo-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
